# tonotedo

./: .gitignore  AGENTS.md  BUILD.md  LICENSE  README.md  SPIKE-ANDROID.md  SPIKE-IOS.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml
docs/: README.md  design.html
docs/_templates/: adr.template.md  design.template.md  feature.template.md  vision.template.md
docs/design-src/: app-mono.jsx  app.jsx  bits.jsx  desktop.jsx  desktop2.jsx  mobile.jsx  screens-cal-m.jsx  screens-cal.jsx  screens-dir.jsx  screens-find.jsx  screens-groups.jsx  screens-settings.jsx  screens-today.jsx  shell.jsx  themes.jsx
docs/spec/: 0001-product-vision.md  0002-entries.md  0003-groups.md  0004-tags.md  0005-mentions.md  0006-markdown-editor.md  0007-keyboard-model.md  0008-calendar.md  0009-search.md  0010-plugins.md  0011-settings.md  0012-notifications.md  0013-mobile.md
docs/tech/: adr-0001-storage-format.md  adr-0002-tech-stack.md  adr-0003-ui-framework.md  adr-0004-editor-base.md  adr-0005-plugin-sandbox-engine.md  design-0001-index-and-reconciliation.md  design-0002-plugin-host.md  design-0003-editor-extensions.md  design-0004-ipc-boundary.md
scripts/: shoot-screens.mjs  shoot.mjs
src/: App.svelte  Spike.svelte  main.ts  version.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.spike.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  spike.rs
src-tauri/src/core/: mod.rs
src-tauri/src/core/frontmatter/: entry.rs  id.rs  mod.rs  parse.rs  reserved.rs  serialize.rs  value.rs
src-tauri/src/core/fswrite/: atomic.rs  hash.rs  lineend.rs  mod.rs  token.rs
src-tauri/src/core/index/: error.rs  migrations.rs  mod.rs  query.rs  scanner.rs  tests.rs  upsert.rs
src-tauri/src/core/journal/: mod.rs
src-tauri/src/core/reconcile/: event.rs  ledger.rs  mod.rs  projection.rs  reconcile_path.rs  rescan.rs  tests.rs  watcher.rs
src-tauri/src/core/recurrence/: expand.rs  mod.rs  overrides.rs  parse.rs  tests.rs  types.rs
src-tauri/src/core/trash/: manifest.rs  mod.rs  ops.rs
src-tauri/src/ipc/: commands2.rs  groups.rs  mod.rs  tests.rs
src-tauri/src/plugins/: capability.rs  error.rs  grants.rs  manifest.rs  mod.rs  runtime.rs  secrets.rs  tests.rs
src/lib/bench/: BenchPage.svelte  doc-gen.ts
src/lib/calendar/: AgendaView.svelte  CalendarView.svelte  DayView.svelte  MonthView.svelte  WeekView.svelte  date-math.ts  index.ts  placement.ts  reschedule.ts  types.ts
src/lib/calendar/tests/: calendar-window.test.ts  date-math.test.ts  placement.test.ts  reschedule.test.ts
src/lib/commands/: Cheatsheet.svelte  Palette.svelte  fuzzy.ts  index.ts  keymap-action.ts  keymap.ts  presets.ts  recents.ts  registry-test-helper.ts  registry.ts  seed.ts  settings.ts  zones.ts
src/lib/commands/tests/: cheatsheet.test.ts  fuzzy.test.ts  keymap.test.ts  presets.test.ts  registry.test.ts  settings.test.ts  stroke-normalization.test.ts  zones.test.ts
src/lib/dev/: DevPage.svelte
src/lib/editor/: Editor.svelte  OutlinePanel.svelte  WikilinkPicker.svelte  active-view.ts  commands.ts  index.ts  outline.ts  selection-context.ts  theme.ts  wikilink-resolve.ts
src/lib/editor/extensions/: autocomplete.ts  blocks.ts  chips.ts  cursor-reveal.ts  editor-keymap.ts  frontmatter-fold.ts  inline-tokens.ts  markdown.ts
src/lib/editor/tests/: autocomplete.test.ts  bench.test.ts  blocks-delete.test.ts  blocks.test.ts  chips.test.ts  commands.test.ts  cursor-reveal.test.ts  frontmatter-fold.test.ts  inline-tokens.test.ts  outline.test.ts  selection-context.test.ts  wikilink-resolve.test.ts
src/lib/editor/vim/: index.ts  keymap.ts  modal-store.svelte.ts  mode-state.ts  motions.ts  operators.ts
src/lib/editor/vim/tests/: engine.test.ts  modal-store.test.ts  motions.test.ts
src/lib/ipc/: index.ts  mock.ts  real.ts  types.ts
src/lib/ipc/tests/: groups-mock.test.ts
src/lib/panel/: GroupConfigPanel.svelte  PropertiesPanel.svelte  frontmatter-view.ts
src/lib/panel/tests/: frontmatter-view.test.ts  group-config.test.ts
src/lib/people/: CreatePersonDialog.svelte  PeopleSection.svelte  PersonView.svelte  index.ts  people-utils.ts
src/lib/people/tests/: people.test.ts
src/lib/plugins/: PluginManager.svelte  index.ts  permission-labels.ts  plugin-commands.ts
src/lib/plugins/tests/: grant-flow.test.ts  permission-labels.test.ts  plugin-commands.test.ts  settings-schema.test.ts
src/lib/search/: SearchOverlay.svelte  index.ts  query-parse.ts  saved-searches-store.svelte.ts
src/lib/search/tests/: search.test.ts
src/lib/settings/: SettingsView.svelte
src/lib/settings/tests/: ipc-wiring.test.ts  preset-apply.test.ts  rebind-flow.test.ts  settings-scope.test.ts  theme-sync.test.ts
src/lib/shell/: ActionSheet.svelte  AppShell.svelte  ChipPopover.svelte  ConflictBanner.svelte  EditorAccessoryBar.svelte  EntryList.svelte  FloatingPaletteButton.svelte  GroupPicker.svelte  MobileTopBar.svelte  PropertiesSheet.svelte  Sidebar.svelte  TrashView.svelte  chip-popover-utils.ts  conflict.ts  entry-ops.ts  group-tree.ts  index.ts  mobile-gestures.ts  mobile-screen.ts  theme-store.svelte.ts
src/lib/shell/tests/: chip-popover.test.ts  conflict.test.ts  entry-ops.test.ts  group-tree.test.ts  mobile-gestures.test.ts  mobile-screen.test.ts
src/lib/tags/: TagBrowser.svelte  index.ts  tag-utils.ts
src/lib/tags/tests/: tags.test.ts
src/presets/: default.md  emacs-flavor.md  vim-flavor.md
src/styles/: THEME-MAP.json  tokens.css  typography.css
src/tests/: ipc.test.ts  runes-compiled.test.ts  smoke.test.ts  theme-token-reresolution.test.ts  tokens.test.ts
