[package]
name = "tonotedo"
version = "0.1.0"
edition = "2021"

[lib]
name = "tonotedo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "tonotedo"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
