[package]
name = "tonotedo"
version = "0.1.0"
edition = "2021"

[lib]
name = "tonotedo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "tonotedo"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jiff = "0.2"

# YAML parsing: saphyr is the maintained fork of yaml-rust, YAML 1.2 compliant,
# no serde dependency so we control serialization directly (needed for round-trip
# byte-exact opaque-value preservation). serde_yaml is archived; serde-saphyr is
# available but serde forces lossy type coercions that break the opaque round-trip
# requirement, so we use the raw saphyr API.
saphyr = "0.0.6"

# SQLite index: rusqlite with bundled SQLite and the FTS5 extension enabled.
# WAL mode + single-writer design per design-0001.
rusqlite = { version = "0.36", features = ["bundled", "bundled-full"] }

# Date/time: jiff provides civil dates, zoned/offset datetimes, and good parsing
# of ISO 8601. It has explicit-offset support (Timestamp + TimeZone::fixed) which
# matches the spec's "stored with explicit offset" requirement, and separately
# represents offset-less civil datetimes for the zone-naive case allowed by 0002.

# ID generation: ULID is lexicographically sortable (good for SQLite index
# ordering), monotonic, URL-safe, and opaque to users. UUID v7 would also be
# sortable but ULID is more compact (26 chars vs 36) and the spec says "opaque".
# ulid crate is the de-facto standard Rust implementation.
ulid = "1"

# Content hashing for the atomic write path and reconciler (issue #7, design-0001).
# xxhash-rust provides xxh3-128 in pure Rust (no C build step → easier iOS/Android
# cross-compilation).  The `xxh3` feature flag enables the 128-bit variant used by
# content_hash().  See src/core/fswrite/hash.rs for the algorithm-choice rationale.
xxhash-rust = { version = "0.8", features = ["xxh3"] }


[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[dev-dependencies]
# tempfile is used in tests for temp-directory creation.
tempfile = "3"
