[package]
name = "tonotedo"
version = "0.1.0"
edition = "2021"

[lib]
name = "tonotedo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "tonotedo"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jiff = "0.2"

# YAML parsing: saphyr is the maintained fork of yaml-rust, YAML 1.2 compliant,
# no serde dependency so we control serialization directly (needed for round-trip
# byte-exact opaque-value preservation). serde_yaml is archived; serde-saphyr is
# available but serde forces lossy type coercions that break the opaque round-trip
# requirement, so we use the raw saphyr API.
saphyr = "0.0.6"

# SQLite index: rusqlite with bundled SQLite and the FTS5 extension enabled.
# WAL mode + single-writer design per design-0001.
rusqlite = { version = "0.36", features = ["bundled", "bundled-full"] }

# Date/time: jiff provides civil dates, zoned/offset datetimes, and good parsing
# of ISO 8601. It has explicit-offset support (Timestamp + TimeZone::fixed) which
# matches the spec's "stored with explicit offset" requirement, and separately
# represents offset-less civil datetimes for the zone-naive case allowed by 0002.

# ID generation: ULID is lexicographically sortable (good for SQLite index
# ordering), monotonic, URL-safe, and opaque to users. UUID v7 would also be
# sortable but ULID is more compact (26 chars vs 36) and the spec says "opaque".
# ulid crate is the de-facto standard Rust implementation.
ulid = "1"

# Content hashing for the atomic write path and reconciler (issue #7, design-0001).
# xxhash-rust provides xxh3-128 in pure Rust (no C build step → easier iOS/Android
# cross-compilation).  The `xxh3` feature flag enables the 128-bit variant used by
# content_hash().  See src/core/fswrite/hash.rs for the algorithm-choice rationale.
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# File watcher: `notify` crate for cross-platform filesystem event watching
# (FSEvents / inotify / ReadDirectoryChangesW).  Uses the recommended-watcher
# API (platform-best) per design-0001 §"Watcher".  `crossbeam-channel` provides
# the MPMC channel between the notify callback and the reconcile worker thread;
# it is chosen over std::sync::mpsc because notify's callback closure requires
# Send and crossbeam channels are fully Send+Sync without Arc overhead.
notify = "8"
crossbeam-channel = "0.5"

# Unicode normalization: NFC/NFD path normalization at the reconcile boundary
# (issue #29, item 3). macOS HFS+ delivers filenames in NFD; the index stores
# NFC; without normalization the same file can appear as both absent and present
# depending on which form is compared. Small, no C build step, no serde dep.
unicode-normalization = "0.1"
# Plugin sandbox engine (adr-0005, design-0002). rquickjs is the Rust binding to
# QuickJS-ng. Pinned to 0.9 (not 0.12) deliberately: 0.9 is a stable release whose
# `Runtime::set_memory_limit` + `Runtime::set_interrupt_handler` API gives the host the
# memory-cap and deadline-interrupt primitives the design requires, and which the 0.10+
# line reshuffled. Bundling the C source means no system QuickJS dependency and identical
# behaviour on all five targets (adr-0005 "interpreter-only on iOS").
# `allocator`: a custom tracking allocator records the per-call high-water memory mark so a
# catchable OOM still accrues a memory strike (review M2 — QuickJS's `memory_used_size`
# reports only live tracked-object bytes after GC, so it cannot detect a brushed ceiling).
#
# Bindings: rquickjs-sys ships pre-generated C bindings only for common HOST triples, not
# for Android/iOS — so cross-compiling to mobile fails with "couldn't read
# src/bindings/<target>.rs". For mobile targets (table below) we enable `bindgen` to
# generate bindings at build time (needs libclang, which the NDK/Xcode toolchains provide);
# desktop builds keep the fast pre-generated path with no libclang dependency.
rquickjs = { version = "0.9", default-features = false, features = ["allocator"] }

# Mobile targets: generate rquickjs bindings at build time (no shipped bindings for these).
[target.'cfg(target_os = "android")'.dependencies]
rquickjs = { version = "0.9", default-features = false, features = ["allocator", "bindgen"] }

[target.'cfg(target_os = "ios")'.dependencies]
rquickjs = { version = "0.9", default-features = false, features = ["allocator", "bindgen"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[dev-dependencies]
# tempfile is used in tests for temp-directory creation.
tempfile = "3"
